--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@astrojs/node": "^5.0.3",
     "@astrojs/solid-js": "^2.0.0",
     "@astrojs/tailwind": "^3.0.0",
     "solid-js": "^1.6.9",
